// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Lazyload by listen event LazyloadImage should render correctly when use listen event 1`] = `
<div>
  <img
    class="rc-lazyload-image"
    data-src="https://img.yzcdn.cn/vant/apple-5.jpg"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
  />
</div>
`;

exports[`test Lazyload by listen event lazyload should render correctly when use listen event 1`] = `
<div>
  <div
    class="rc-lazyload"
  >
    <div
      class="rc-lazyload__placeholder"
      style="height: 0px;"
    />
  </div>
</div>
`;

exports[`test Lazyload by observer lazyload should render correctly when IntersectionObserver is available 1`] = `
<div>
  <div
    class="rc-lazyload"
  >
    <div
      class="rc-lazyload__placeholder"
      style="height: 0px;"
    />
  </div>
</div>
`;

exports[`test Lazyload by observer should render correctly when IntersectionObserver is available 1`] = `
<div>
  <img
    class="rc-lazyload-image"
    data-src="https://img.yzcdn.cn/vant/apple-5.jpg"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style="height: 300px;"
  />
</div>
`;
